Changed CMakeLists so that MPI wasn't required and you can run serial mode without it

--- a/scripts/analysis/CMakeLists.txt
+++ b/scripts/analysis/CMakeLists.txt
@@ -26,11 +26,13 @@ SWIG_ADD_MODULE(plfsinterface python plfsinterface.i "${PLFS_SOURCE_DIR}/Logical
 SWIG_LINK_LIBRARIES(plfsinterface ${PYTHON_LIBRARIES})
 swig_link_libraries(plfsinterface plfs_lib)
 
-project(analysis)
-add_executable(analysis analysisDataParser.cpp)
-find_package(MPI REQUIRED)
+find_package(MPI)
 
-set(CMAKE_CXX_COMPILE_FLAGS ${CMAKE_CXX_COMPILE_FLAGS} ${MPI_COMPILE_FLAGS})
-set(CMAKE_CXX_LINK_FLAGS ${CMAKE_CXX_LINK_FLAGS} ${MPI_LINK_FLAGS})
-target_link_libraries(analysis ${MPI_LIBRARIES})
-target_link_libraries(analysis plfs_lib)
+if (MPI_FOUND)
+    project(analysis)
+    add_executable(analysis analysisDataParser.cpp)
+    set(CMAKE_CXX_COMPILE_FLAGS ${CMAKE_CXX_COMPILE_FLAGS} ${MPI_COMPILE_FLAGS})
+    set(CMAKE_CXX_LINK_FLAGS ${CMAKE_CXX_LINK_FLAGS} ${MPI_LINK_FLAGS})
+    target_link_libraries(analysis ${MPI_LIBRARIES})
+    target_link_libraries(analysis plfs_lib)
+endif(MPI_FOUND)
