--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ project(plfs)
 set (plfs_VERSION_MAJOR 2)
 set (plfs_VERSION_MINOR 5)
 set (plfs_VERSION_PATCH 0rc1)
+set (plfs_DATA_VERSION 1.0)
 set (PACKAGE_STRING "PLFS ${plfs_VERSION_MAJOR}.${plfs_VERSION_MINOR}")
 set (plfs_VERSION_FULL "${plfs_VERSION_MAJOR}.${plfs_VERSION_MINOR}")
 if (DEFINED plfs_VERSION_PATCH)
