plfs_setxattr man page now installed.
This fixes Issue #333. The plfs_setxattr man page was missing from the
CMakeLists file.

--- a/man/CMakeLists.txt
+++ b/man/CMakeLists.txt
@@ -40,6 +40,7 @@ SET (SEEALSO3 "${SEEALSO3}, plfs_readdir_c(3)")
 SET (SEEALSO3 "${SEEALSO3}, plfs_readlink(3)")
 SET (SEEALSO3 "${SEEALSO3}, plfs_rename(3)")
 SET (SEEALSO3 "${SEEALSO3}, plfs_rmdir(3)")
+SET (SEEALSO3 "${SEEALSO3}, plfs_setxattr(3)")
 SET (SEEALSO3 "${SEEALSO3}, plfs_statvfs(3)")
 SET (SEEALSO3 "${SEEALSO3}, plfs_symlink(3)")
 SET (SEEALSO3 "${SEEALSO3}, plfs_sync(3)")
@@ -108,7 +109,7 @@ foreach (MAN3 plfs is_plfs_path plfs_chown plfs_flatten_index plfs_mode
               plfs_query plfs_trunc plfs_opendir_c plfs_readdir_c plfs_closedir_c
               plfs_access plfs_link plfs_read plfs_unlink plfs_get_filetype
               plfs_readdir plfs_utime plfs_chmod 
-              plfs_mkdir plfs_readlink plfs_statvfs
+              plfs_mkdir plfs_readlink plfs_setxattr plfs_statvfs
               plfs_flush_writes plfs_invalidate_read_cache )
     configure_file( "man3/${MAN3}.3in" "${PLFS_BUILD_DIR}/share/man/man3/${MAN3}.3")
 endforeach(MAN3)
